<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" tools:context="dev.anzus.awlumina.InstructionsActivity"
    tools:showIn="@layout/fragment_instrucciones">

<!-- TODO: Update blank fragment layout -->

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/instrucciones1"
    android:id="@+id/textView5"
        android:layout_centerHorizontal="true"
    android:textColor="#000000" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:id="@+id/textView7"
    android:layout_below="@+id/textView5"
    android:layout_centerHorizontal="true" />

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageView6"
    android:src="@drawable/instrucciones1_1"
    android:layout_below="@+id/textView7"
    android:layout_centerHorizontal="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:id="@+id/textView8"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/instrucciones2"
    android:id="@+id/textView9"
    android:layout_below="@+id/textView8"
    android:layout_centerHorizontal="true"
    android:textColor="#000000" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageView7"
    android:layout_below="@+id/textView10"
    android:layout_centerHorizontal="true"
    android:src="@drawable/instrucciones1_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/uno_de_siete"
        android:id="@+id/textView67"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>




