<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAzulGG1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/btn_warmth_down"
                android:contentDescription="@string/contentImage" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnBrilloUpGG1"
                android:src="@drawable/btn_bright_up"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/contentImage" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnAzulGG1"
                android:layout_centerHorizontal="true"
                android:background="@drawable/panel_vacio"
                android:id="@+id/linearLayout"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/space"
                        android:id="@+id/textView38"
                        android:layout_gravity="center_horizontal"
                        android:textSize="7sp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/spacetriple"
                            android:id="@+id/textView40" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnOnGGG1"
                            android:src="@drawable/btn_on"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/spacetriple"
                            android:id="@+id/textView41" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/space"
                        android:id="@+id/textView43"
                        android:layout_gravity="center_horizontal"
                        android:textSize="7dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="0dp"
                        android:paddingBottom="6dp"
                        android:id="@+id/relativeLayout3"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/divisor_panel"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"></RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/space"
                        android:id="@+id/textView42"
                        android:layout_gravity="center_horizontal"
                        android:textSize="7dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnOffGGG1"
                        android:src="@drawable/btn_off"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/contentImage" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/space"
                        android:id="@+id/textView37"
                        android:layout_gravity="center_horizontal"
                        android:textSize="7sp" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAmarrilloGG1"
                android:src="@drawable/btn_warmth_up"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/contentImage" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnBrilloDownGG1"
                android:src="@drawable/btn_bright_down"
                android:layout_below="@+id/linearLayout"
                android:layout_alignLeft="@+id/btnBrilloUpGG1"
                android:layout_alignStart="@+id/btnBrilloUpGG1"
                android:contentDescription="@string/contentImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/color"
                android:id="@+id/textViewColorG1"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_alignRight="@+id/btnAzulGG1"
                android:layout_alignEnd="@+id/btnAzulGG1"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/brillo"
                android:id="@+id/textViewBrightG1"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#000000" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="0dp"
            android:paddingBottom="8dp"
            android:layout_gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAnadirGG1"
                    android:src="@drawable/btn_add"
                    android:layout_gravity="center"
                    android:contentDescription="@string/contentImage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/anadir"
                    android:id="@+id/textViewAddG1"
                    android:layout_gravity="center"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/linearLayout2"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSuprimirGG1"
                    android:src="@drawable/btn_remove"
                    android:layout_gravity="center"
                    android:contentDescription="@string/contentImage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/suprimir"
                    android:id="@+id/textViewRemoveG1"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp" />
            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/anadir_suprimir"
                android:id="@+id/textView47"
                android:textColor="#000000"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp" />
        </ScrollView>

    </LinearLayout>

</RelativeLayout>